<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Home Air Monitor</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_details">Sensor Details</string>
    <string name="title_activity_edit">Edit Page</string>
    <string name="current_sensors">Current Sensors:</string>
    <string name="first_sensor_label">Furnace Sensor</string>
    <string name="first_sensor_details">Furnace Sensor Details</string>
    <string name="edit_content">Edit This</string>
    <string name="details">Details</string>
    <string name="status">Status</string>
    <string name="current_status">Good/Bad</string>
    <string name="particle_count">Particle Count (mg/m^3): </string>
    <string name="sample_area">Sample Area: </string>
    <string name="co_title">Carbon Monoxide (ppm): </string>
    <string name="temperature_title">Temperature: </string>
    <string name="humidity_title">Humidity: </string>
    <string name="edit_fields">Click to edit fields: </string>
    <string name="sensor_name">Name of Sensor </string>
    <string name="area_size">Size of area to monitor </string>
    <string name="changed">Changed </string>
    <string name="ignored">Ignored</string>
    <string name="area_value">Area</string>
    <string name="humidity_value">humidity</string>
    <string name="temperature_value">Temperature</string>
    <string name="co_value">CO</string>
    <string name="particle_value">Particles</string>
    <string name="add_button">Add</string>
    <string name="edit_button">Edit</string>
    <string name="refresh_button">Refresh</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="add_sensor_name">Enter Sensor Name</string>
    <string name="save">Save</string>
    <string name="title_activity_save_helper">SaveHelper</string>
    <string name="local_service_started">Service start</string>

</resources>