<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cleanspace.EditActivity" >

    <TextView
        android:id="@+id/edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_fields"
        android:textColor="#16b116"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/sensor_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_title"
        android:layout_marginTop="30dp"
        android:hint="@string/sensor_name"
        android:text="@string/first_sensor_details"
        android:textColor="#16b116"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/sensor_title"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/status"
        android:textColor="#16b116"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/currentStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/status"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/current_status"
        android:textColor="#16b116"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currentStatus"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="35dp"
        android:text="@string/details"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/particle_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/details_title"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="45dp"
        android:text="@string/particle_count"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/current_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/details_title"
        android:layout_marginRight="15dp"
        android:layout_marginTop="40dp"
        android:text="@string/particle_value"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/sample_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/particle_count"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/sample_area"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/current_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/particle_count"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/area_value"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/sample_area"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/circle"
        android:text="@string/save"
        android:textColor="#16b116"
        android:textSize="12sp" />

</RelativeLayout>