<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.cleanspace.DetailsActivity" >

    <TextView
        android:id="@+id/details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="255dp"
        android:text="@string/details"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/particle_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/details_title"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/particle_count"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/particle_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/details_title"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/particle_value"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/humidity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/particle_value"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/humidity_title"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/current_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/particle_value"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/humidity_value"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/temperature_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/humidity_title"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/temperature_title"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/current_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/humidity_title"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/temperature_value"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/co_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperature_title"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/co_title"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/co_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/temperature_title"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/co_value"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/area_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/co_title"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/sample_area"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/current_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/co_title"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/area_value"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/sensor_title"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:text="@string/first_sensor_details"
        android:textColor="#16b116"
        android:textSize="33sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="140dp"
        android:text="@string/status"
        android:textColor="#16b116"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/currentStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/status"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/current_status"
        android:textColor="#16b116"
        android:textSize="18sp" />

    <Button
        android:id="@+id/changedButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/area_title"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/details_title"
        android:layout_toRightOf="@+id/details_title"
        android:background="@drawable/circle"
        android:onClick="changedButton"
        android:text="@string/changed"
        android:textColor="#16b116"
        android:textSize="12sp" />

    <Button
        android:id="@+id/ignoredButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/current_area"
        android:layout_marginTop="30dp"
        android:layout_toLeftOf="@+id/particle_value"
        android:layout_toStartOf="@+id/particle_value"
        android:background="@drawable/circle"
        android:onClick="ignoredButton"
        android:text="@string/ignored"
        android:textColor="#16b116"
        android:textSize="12sp" />

    <Button
        android:id="@+id/graphButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/perm_group_calendar"
        android:onClick="graphButton" />

</RelativeLayout>